--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -1,7 +1,7 @@
 .single-product-container
   .img-container
     .product-image style="background-image: url('#{product.image.src}')"
-    .product-image-two style="display: none; background-image: url('#{product.images.second.src}')"
+    .product-image-two style="display: none; background-image: url('#{product.images.second.try(:src)}')"
   .vendor-field = product.vendor
   .title-container
     .title-field = product.title
