small stylr changes to make main page look more like TV

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -4,7 +4,7 @@
   display: flex
   justify-content: space-between
   align-items: center
-  margin-bottom: 2rem
+  margin-bottom: 1rem
   font-size: 14px
 
 .main-container
@@ -22,6 +22,7 @@
 .filter-heading
   font-weight: bold
   margin-right: 0.5rem
+  font-size: 17px
 
 .filter-brand-heading, .filter-size-heading, .filter-type-heading, .filter-price-heading
   font-weight: bold
@@ -48,7 +49,7 @@
   margin: 0 1rem 0 0
 
 .filter-brand-container, .filter-price-container
-  border-bottom: 1px solid black
+  border-bottom: 1px solid #ccc
   padding-bottom: 1rem
 
 .filter-size-container
@@ -113,14 +114,6 @@
   background-position: center
   background-size: cover
   margin-left: auto
-
-
-
-
-
-
-
-
 
 #shopify-section-cust-footer
 .penbtn-container
