--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -10,7 +10,7 @@
   color: #2A2A2A
 
 .single-product-container
-  margin: 1rem
+  // margin: 1rem
 
 .price-field
   color: #fe89b5
@@ -75,3 +75,10 @@
 
 .hidden-products
   display: none
+
+.products-found-count
+  font-size: 15px
+
+.product-searched-heading
+  font-size: 22px
+  font-weight: bold
