--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -30,7 +30,7 @@ body
 
 .openbtn-container
   height: 3rem
-  margin: 1rem
+  margin: 1rem 0
   display: flex
   justify-content: space-around
   align-items: center
