--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -82,3 +82,59 @@
 .product-searched-heading
   font-size: 22px
   font-weight: bold
+
+.dropbtn
+  // background-color: #4CAF50
+  color: white
+  padding: 10px
+  font-size: 16px
+  border: 1px solid #ccc
+  cursor: pointer
+  display: flex
+  width: 150px
+  justify-content: space-between
+  align-items: center
+
+/* The container <div> - needed to position the dropdown content
+
+.dropdown
+  position: relative
+  display: inline-block
+
+/* Dropdown Content (Hidden by Default)
+
+.dropdown-content
+  display: none
+  position: absolute
+  background-color: #f9f9f9
+  min-width: 160px
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2)
+  z-index: 1
+  a
+    color: black
+    padding: 12px 16px
+    text-decoration: none
+    display: block
+    &:hover
+      background-color: #f1f1f1
+
+/* Links inside the dropdown
+
+/* Change color of dropdown links on hover
+
+/* Show the dropdown menu on hover
+
+.dropdown:hover
+  .dropdown-content
+    display: block
+  .dropbtn
+    // background-color: #3e8e41
+
+/* Change the background color of the dropdown button when the dropdown content is shown
+
+.arrow-down
+  width: 0
+  height: 0
+  border-left: 7px solid transparent
+  border-right: 7px solid transparent
+  border-top: 7px solid black
