--- a/app/assets/stylesheets/search.sass
+++ b/app/assets/stylesheets/search.sass
@@ -1,7 +1,12 @@
 .search-result-container
   width: 100%
   display: flex
-  padding: 0.5rem
+  height: 67px
+  align-items: center
+  padding: 0 0.5rem
+  &:hover
+    background-color: #000000
+    color: white
 
 .search-result-main-container
   background-color: #f1f1f1
@@ -10,11 +15,11 @@
 .js-search-results
   background: white
   width: 100%
-  height: 25em
+  height: 35em
   position: absolute
   top: 40px
   z-index: 4000
-  overflow: scroll
+  // overflow: scroll
   display: none
 
 .search-result-image
@@ -32,3 +37,15 @@
   display: flex
   flex-direction: column
   align-items: start
+
+
+.search-result-product-container
+  background-color: #F4F4F4
+  height: 35px
+  line-height: 35px
+  border-top: 1px solid black
+
+.search-result-product-text
+  float: left
+  margin-left: 1rem
+  font-weight: bold
