--- a/app/views/home/_search_results.html.slim
+++ b/app/views/home/_search_results.html.slim
@@ -1,9 +1,13 @@
 .search-result-main-container
-  - @products.each do |product|
-    .search-result-container
-      .search-result-image style="background-image: url('#{product.image.src}')"
-      .search-result-sub-container
-        .search-result-vendor = product.vendor
-        .search-result-title  = truncate("#{product.title}", length: 45)
-        .search-result-price  = "£ #{product.variants.first.price} GPB"
-    hr style="margin: 0.5rem auto"
+  .search-result-product-container
+    .search-result-product-text PRODUCTS
+  div style="overflow: auto; background-color: red; height: 300px; width: 100%"
+    - @products.each do |product|
+      .search-result-container
+        .search-result-image style="background-image: url('#{product.image.src}')"
+        .search-result-sub-container
+          .search-result-vendor style="font-weight: bold" = product.vendor
+          .search-result-title  = truncate("#{product.title}", length: 45)
+          .search-result-price  = "£ #{product.variants.first.price} GPB"
+  .search-result-product-container
+    .search-result-product-text POPULAR SEARCHES
