--- a/app/views/app_proxy/index.html.slim
+++ b/app/views/app_proxy/index.html.slim
@@ -1,3 +1,7 @@
+.main-search.collapsed#main-search-id style="display: none"
+  input placeholder="Search..." type="text" class="main-search-input"
+  a.main-search-button
+
 .app-container
   #mySidenav.sidenav.hidden-on-large-screen
     div style='padding: 60px 16px'
