--- a/app/views/test_proxies/index.html.slim
+++ b/app/views/test_proxies/index.html.slim
@@ -41,81 +41,8 @@
             .sub-heading = params[:product_type]
             .remove-filter
 
-      .filter-brand-container
-        .heading-container
-          .filter-brand-heading style='color: white' BRAND
-          .js-brand-filter-icon.js-show-brand-filter
-        .filter-brand-collection.js-brand-container
-          - @vendor_array.each do |va|
-            = link_to test_proxies_path(brand: va, size: params[:size], product_type: params[:product_type]) do
-              - if params[:brand] == va
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading style='color: white' = va
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading style='color: white' = va
-
-      .filter-size-container
-        .heading-container
-          .filter-size-heading style='color: white' SIZE
-          .js-size-filter-icon.js-show-size-filter
-        .filter-size-collection.js-size-container
-          - @size_array.each do |size|
-            = link_to test_proxies_path(size: size, brand: params[:brand], product_type: params[:product_type]) do
-              - if params[:size] == size
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading style='color: white' = size
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading  style='color: white' = size
-
-      .filter-type-container
-        .heading-container
-          .filter-type-heading style='color: white' TYPE
-          .js-type-filter-icon.js-show-type-filter
-        .filter-type-collection.js-type-container
-          - @product_type.each do |pt|
-            = link_to test_proxies_path(size: params[:size], brand: params[:brand], product_type: pt) do
-              - if params[:product_type] == pt
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading style='color: white' = pt
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading style='color: white' = pt
-
-      .filter-price-container
-        .heading-container
-          .filter-price-heading style="color: white" PRICE
-          .js-price-filter-icon.js-show-price-filter
-        .filter-price-collection.js-price-container
-          - @price_ranges.each do |pr|
-            = link_to test_proxies_path(size: params[:size], brand: params[:brand], product_type: pr) do
-              - if params[:product_type] == pr
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading style="color: white" = "£ #{pr}"
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading style="color: white" = "£ #{pr}"
+      - ProductSetting.last.filter_array.each do |filter|
+        = render partial: filter, locals: {desktop: false}
 
   #myLeftSidenav.sidenav.hidden-on-large-screen
     div style='padding: 0 20px'
@@ -233,84 +160,8 @@
               .sub-heading = pt
               .remove-filter
 
-      .filter-brand-container.hidden-on-small-screen
-        .heading-container
-          .filter-brand-heading BRAND
-          .js-brand-filter-icon.js-show-brand-filter
-        .filter-brand-collection.js-brand-container
-          - @vendor_array.each do |va|
-            - brand = [va] << params[:brand]
-            = link_to test_proxies_path(brand: brand.compact.flatten.uniq, size: params[:size], product_type: params[:product_type], price: params[:price]) do
-              - if params[:brand] == va
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = va
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading = va
-
-      .filter-size-container.hidden-on-small-screen
-        .heading-container
-          .filter-size-heading SIZE
-          .js-size-filter-icon.js-show-size-filter
-        .filter-size-collection.js-size-container
-          - @size_array.each do |size|
-            - multisize = [size] << params[:size]
-            = link_to test_proxies_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price]) do
-              - if params[:size] == size
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = size
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading = size
-
-      .filter-type-container.hidden-on-small-screen
-        .heading-container
-          .filter-type-heading TYPE
-          .js-type-filter-icon.js-show-type-filter
-        .filter-type-collection.js-type-container
-          - @product_type.each do |pt|
-            - prodtype = [pt] << params[:product_type]
-            = link_to test_proxies_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price]) do
-              - if params[:product_type] == pt
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = pt
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading = pt
-
-      .filter-price-container.hidden-on-small-screen
-        .heading-container
-          .filter-price-heading PRICE
-          .js-price-filter-icon.js-show-price-filter
-        .filter-price-collection.js-price-container
-          - @price_ranges.each do |pr|
-            = link_to test_proxies_path(size: params[:size], brand: params[:brand], product_type: params[:product_type], price: pr) do
-              - if params[:product_type] == pr
-                .black-box-container
-                  .black-box-parent style='position: relative'
-                    .black-box style='position: relative; top: 0; left: 0'
-                    .small-black-box style='position: absolute; top: 0; left: 0'
-                  .sub-heading = "£ #{pr}"
-                  .tick-icon
-              - else
-                .black-box-container
-                  .black-box
-                  .sub-heading = "£ #{pr}"
+      - ProductSetting.last.filter_array.each do |filter|
+        = render partial: filter, locals: {desktop: true}
 
     .product-container
       .js-all-products
@@ -320,5 +171,5 @@
       .loading-gif.js-loading-gif style="background-image: url('http://localhost:3000#{ProductSetting.last.image.url}')"
 
 javascript:
-  Window.paramUrl = "&brand=#{params[:brand]}&size=#{params[:size]}&product_type=#{params[:product_type]}&sort_by=#{params[:sort_by]}"
+  Window.paramUrl = "#{request.url.split("?")[1]}"
   Window.noOfProducts = "#{ProductSetting.last.number_of_items_to_load}"
