--- a/app/assets/stylesheets/offcanvas.sass
+++ b/app/assets/stylesheets/offcanvas.sass
@@ -19,6 +19,9 @@
   margin-left: 1rem
 
 .position-left
+  position: absolute
+  left: 16rem
+  right: 0
   .file input
     background-color: red
     height: 200px
