bt-style updates to the admin section

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -83,16 +83,28 @@
   width: 100%
 
 #sortable li
-  margin: 0 3px 3px 3px
-  padding: 0.4em
-  padding-left: 1.5em
   font-size: 16px
-  height: 30px
-  background: white
+  background-color: #F8F8F8
+  width: 100%
+  border-radius: 5px
+  border: 1px solid black
+  margin-bottom: 1rem
+  display: flex
+  align-items: center
+
 
 #sortable li span
   position: absolute
   margin-left: -1.3em
+
+.li-sub-box
+  background-color: beige
+  width: 20%
+  border: 1px solid grey
+  border-radius: 5px
+
+.li-sub-box-text
+  padding-left: 0.5rem
 
 .products-found-count
   font-size: 15px
