--- a/app/assets/stylesheets/admin_section.sass
+++ b/app/assets/stylesheets/admin_section.sass
@@ -1,5 +1,5 @@
 .admin-section-container
-  background-color: green
+  // background-color: green
   width: 100%
   height: 100%
 
@@ -14,18 +14,21 @@
   margin-left: 1rem
 
 .admin-section-side-bar-container
-  background-color: red
-  height: 100%
+  background-color: #F4F6F8
+  height: 100vh
   width: 20%
-  padding: 1rem
 
 .admin-gif-upload-container
-  background-color: yellow
   position: relative
-  height: 400px
+  height: 331px
+  border: 1px solid grey
+  border-radius: 5px
+
+.admin-gif-upload-info
+  margin: 16px 22px
 
 .admin-submit-button-container
-  background-color: purple
+  // background-color: purple
   height: 50px
   display: flex
 
@@ -35,20 +38,62 @@
   padding: 0.5rem
 
 .js-admin-section-scroll-config-container
-  background-color: blue
+  // background-color: blue
   height: 100%
   width: 80%
   padding: 1rem
   float: right
+  border-top: 1px solid red
 
 .js-admin-section-filter-config-container
-  background-color: orange
+  // background-color: orange
+  float: right
+  width: 80%
+  padding: 1rem
+  border-top: 1px solid red
+
+.js-admin-section-search-config-container
+  // background-color: maroon
   height: 400px
   float: right
   width: 80%
+  padding: 1rem
+  border-top: 1px solid red
 
-.js-admin-section-search-config-container
-    background-color: maroon
-    height: 400px
-    float: right
-    width: 80%
+.header-box
+  display: flex
+  align-items: center
+  justify-content: space-between
+  margin-bottom: 1rem
+  border: 1px solid grey
+  padding: 16px 22px
+  border-radius: 5px
+
+.number-of-items-to-load-container
+  display: flex
+  // background-color: aqua
+  align-items: center
+
+.scroll-data-inputs
+  margin-top: 1rem
+  border: 1px solid grey
+  width: 100%
+  padding: 22px
+  border-radius: 5px
+
+.filter-app-config-container
+  padding: 1rem
+  border: 1px solid grey
+  border-radius: 5px
+
+.js-true-scroll-option, .js-true-filter-option, .js-true-search-option
+  display: flex
+  // background-color: yellow
+  align-items: center
+  margin: 1rem 0
+
+.admin-section-side-bar-text
+  margin-left: 0.5rem
+
+.filter-app-config-text
+  margin-bottom: 1rem
