semi-polish style for admin section

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -87,7 +87,7 @@
   background-color: #F8F8F8
   width: 100%
   border-radius: 5px
-  border: 1px solid black
+  border: 1px solid #dfe3e8
   margin-bottom: 1rem
   display: flex
   align-items: center
@@ -98,13 +98,14 @@
   margin-left: -1.3em
 
 .li-sub-box
-  background-color: beige
+  background-color: white
   width: 20%
-  border: 1px solid grey
+  border: 1px solid #dfe3e8
   border-radius: 5px
 
 .li-sub-box-text
   padding-left: 0.5rem
+  color: #637381
 
 .products-found-count
   font-size: 15px
