--- a/app/assets/stylesheets/admin_section.sass
+++ b/app/assets/stylesheets/admin_section.sass
@@ -6,29 +6,37 @@
 .admin-section-header-container
   width: 100%
   height: 60px
-  background-color: #F4F6F8
+  background-color: #FFFFFF
   display: flex
   align-items: center
+  border-bottom: 0.1rem solid rgb(223, 227, 232)
 
 .admin-section-header
   margin-left: 1rem
+  color: #212b36
 
 .admin-section-side-bar-container
   background-color: #F4F6F8
   height: 100vh
   width: 20%
+  border-left: 0.1rem solid rgb(223, 227, 232)
+  border-right: 0.1rem solid rgb(223, 227, 232)
 
 .admin-gif-upload-container
   position: relative
   height: 331px
-  border: 1px solid grey
+  border: 1px solid #dfe3e8
   border-radius: 5px
+  background-color: #F4F6F8
 
 .admin-gif-upload-info
   margin: 16px 22px
+  color: #212b36
+
+.number-of-items-to-load-text
+  color: #212b36
 
 .admin-submit-button-container
-  // background-color: purple
   height: 50px
   display: flex
 
@@ -36,64 +44,66 @@
   font-size: 12px
   align-self: center
   padding: 0.5rem
+  color: #212b36
 
 .js-admin-section-scroll-config-container
-  // background-color: blue
   height: 100%
   width: 80%
   padding: 1rem
   float: right
-  border-top: 1px solid red
 
 .js-admin-section-filter-config-container
-  // background-color: orange
   float: right
   width: 80%
   padding: 1rem
-  border-top: 1px solid red
 
 .js-admin-section-search-config-container
-  // background-color: maroon
   height: 400px
   float: right
   width: 80%
   padding: 1rem
-  border-top: 1px solid red
 
 .header-box
   display: flex
   align-items: center
   justify-content: space-between
   margin-bottom: 1rem
-  border: 1px solid grey
+  border: 1px solid #dfe3e8
   padding: 16px 22px
   border-radius: 5px
+  color: #212b36
+  background-color: #F4F6F8
+
 
 .number-of-items-to-load-container
   display: flex
-  // background-color: aqua
   align-items: center
 
 .scroll-data-inputs
   margin-top: 1rem
-  border: 1px solid grey
+  border: 1px solid #dfe3e8
   width: 100%
   padding: 22px
   border-radius: 5px
+  background-color: #F4F6F8
 
 .filter-app-config-container
   padding: 1rem
-  border: 1px solid grey
+  border: 1px solid #dfe3e8
   border-radius: 5px
+  background-color: white
 
 .js-true-scroll-option, .js-true-filter-option, .js-true-search-option
   display: flex
-  // background-color: yellow
   align-items: center
-  margin: 1rem 0
+  margin-bottom: 1rem
+  height: 60px
+
 
 .admin-section-side-bar-text
   margin-left: 0.5rem
+  color: #637381
 
 .filter-app-config-text
   margin-bottom: 1rem
+  color: #637381
